force-app/main/default/objects/Order/fields/record_URL__c.field-meta.xml
<CustomField>
    <fullName>record_URL__c</fullName>
    <formula>IF( CONTAINS($Api.Partner_Server_URL_260, &apos;my.salesforce.com/&apos;),  

LEFT($Api.Partner_Server_URL_260, FIND(&apos;my.salesforce.com/&apos;,$Api.Partner_Server_URL_260)) + &apos;y.salesforce.com/&apos;+Id,
LEFT($Api.Partner_Server_URL_260, FIND(&apos;my.site.com/&apos;,$Api.Partner_Server_URL_260)) + &apos;y.salesforce.com/&apos;+Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>record URL</label>
    <type>Text</type>
</CustomField>