force-app/main/default/objects/Order/fields/Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>