force-app/main/default/objects/Order/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(ISPICKVAL($User.LanguageLocaleKey, &apos;fr&apos;), 
    TEXT(Address__r.Region__c), 
    CASE(  Address__r.Region__c  , 
        &apos;Montréal&apos;, &apos;Montreal&apos;, 
        &apos;Québec&apos;, &apos;Quebec&apos;,
        &apos;Nouveau-Brunswick&apos;,&apos;New Brunswick&apos;, 
        TEXT(Address__r.Region__c))   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>