force-app/main/default/objects/Order/fields/Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Date__c</fullName>
    <label>Rejection Date</label>
    <type>DateTime</type>
</CustomField>