force-app/main/default/objects/Order/fields/Release_Amount__c.field-meta.xml
<CustomField>
    <fullName>Release_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Release Amount Residential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>