force-app/main/default/objects/Order/fields/Sales_Split_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Split_3__c</fullName>
    <label>Sales Percentage 3</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>