force-app/main/default/objects/Order/fields/Salesperson_1__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson 1</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.Salesperson_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>