force-app/main/default/objects/Order/fields/Salesperson_2__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>