force-app/main/default/objects/Order/fields/Salesperson_3__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>