force-app/main/default/objects/Order/fields/SC_Delivery_Amount__c.field-meta.xml
<CustomField>
    <fullName>SC_Delivery_Amount__c</fullName>
    <formula>if( AND( Amount_Paid__c &lt; Order_Total__c - Release_Amount__c  ,OR(
ISPICKVAL(Contract_Type__c , &apos;110&apos;),
AND(
ISPICKVAL(Contract_Type__c , &apos;112&apos;),
OR(ISPICKVAL( ContractType__c , &apos;37&apos;),ISPICKVAL( ContractType__c , &apos;38&apos;))

)))     	

, Order_Total__c - Amount_Paid__c - Release_Amount__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for delivery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>