force-app/main/default/objects/Order/fields/SC_HT_Height_Wall__c.field-meta.xml
<CustomField>
    <fullName>SC_HT_Height_Wall__c</fullName>
    <label>SC HT Height Wall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>