force-app/main/default/objects/Order/fields/SC_Installation_Amount__c.field-meta.xml
<CustomField>
    <fullName>SC_Installation_Amount__c</fullName>
    <formula>if( OR(
ISPICKVAL(Contract_Type__c , &apos;110&apos;),
AND(
ISPICKVAL(Contract_Type__c , &apos;112&apos;),
OR(ISPICKVAL( ContractType__c , &apos;37&apos;),ISPICKVAL( ContractType__c , &apos;38&apos;))

))     	

,Amount_Due__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount for installation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>