force-app/main/default/objects/Order/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>