force-app/main/default/objects/Order/fields/Shopify_payment_url__c.field-meta.xml
<CustomField>
    <fullName>Shopify_payment_url__c</fullName>
    <label>Shopify payment url</label>
    <type>Url</type>
</CustomField>