force-app/main/default/objects/Order/fields/Shopify_Request_Pending__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Request_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>&apos;Shopify Request Pending</label>
    <type>Checkbox</type>
</CustomField>