force-app/main/default/objects/Order/fields/Should_send_fees_email_TECH__c.field-meta.xml
<CustomField>
    <fullName>Should_send_fees_email_TECH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be changed to true after amount due is populated. Should never be set to false after.</description>
    <label>Should send fees email (TECH)</label>
    <type>Checkbox</type>
</CustomField>