force-app/main/default/objects/Order/fields/Signature_Delivery_Email__c.field-meta.xml
<CustomField>
    <fullName>Signature_Delivery_Email__c</fullName>
    <formula>IF( Region__c = Text($CustomMetadata.Order_Template_Signature_Infos__mdt.SP_Quebec.Region__c) ,
CASE( Text(Contract_Type__c) ,
&apos;112&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SC_Quebec.Delivery_Email__c,
&apos;106&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HL_Quebec.Delivery_Email__c ,
&apos;110&apos;, $CustomMetadata.Order_Template_Signature_Infos__mdt.HT_Quebec.Delivery_Email__c ,
&apos;&apos;
),

CASE( Text(Contract_Type__c) ,
&apos;112&apos; ,  $CustomMetadata.Order_Template_Signature_Infos__mdt.SC.Delivery_Email__c   ,
&apos;106&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HL.Delivery_Email__c ,
&apos;110&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HT.Delivery_Email__c ,
&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Delivery Email</label>
    <type>Text</type>
</CustomField>