force-app/main/default/objects/Order/fields/Signature_Installation_Post__c.field-meta.xml
<CustomField>
    <fullName>Signature_Installation_Post__c</fullName>
    <formula>IF( Region__c = Text($CustomMetadata.Order_Template_Signature_Infos__mdt.SP_Quebec.Region__c) ,
CASE( Text(Contract_Type__c) ,
&apos;143&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AB_Quebec.Installation_Post__c  ,
&apos;115&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.CR_Quebec.Installation_Post__c  ,
&apos;106&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HL_Quebec.Installation_Post__c  ,
&apos;110&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HT_Quebec.Installation_Post__c  ,
&apos;112&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SC_Quebec.Installation_Post__c  ,
&apos;&apos;
),
CASE( Text(Contract_Type__c) ,
&apos;143&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AB.Installation_Post__c ,
&apos;115&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.CR.Installation_Post__c ,
&apos;106&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HL.Installation_Post__c ,
&apos;110&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HT.Installation_Post__c ,
&apos;112&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SC.Installation_Post__c ,
&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Installation Post</label>
    <type>Text</type>
</CustomField>