force-app/main/default/objects/Order/fields/Signature_Phone__c.field-meta.xml
<CustomField>
    <fullName>Signature_Phone__c</fullName>
    <formula>IF( Region__c = Text($CustomMetadata.Order_Template_Signature_Infos__mdt.SP_Quebec.Region__c) ,
CASE( Text(Contract_Type__c) ,
&apos;119&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SP_Quebec.Phone_Quebec__c ,
&apos;127&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AC_Quebec.Phone_Quebec__c ,
&apos;143&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AB_Quebec.Phone_Quebec__c ,
&apos;115&apos;, $CustomMetadata.Order_Template_Signature_Infos__mdt.CR_Quebec.Phone_Quebec__c ,
&apos;106&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HL_Quebec.Phone_Quebec__c ,
&apos;110&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HT_Quebec.Phone_Quebec__c ,
&apos;141&apos;, $CustomMetadata.Order_Template_Signature_Infos__mdt.MB_Quebec.Phone_Quebec__c ,
&apos;112&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SC_Quebec.Phone_Quebec__c ,
&apos;124&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.RC_Quebec.Phone_Quebec__c ,
&apos;&apos;
),
CASE( Text(Contract_Type__c) ,
&apos;119&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SP.Phone__c ,
&apos;127&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AC.Phone__c ,
&apos;143&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AB.Phone__c ,
&apos;115&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.CR.Phone__c ,
&apos;106&apos;, $CustomMetadata.Order_Template_Signature_Infos__mdt.HL.Phone__c ,
&apos;106&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.HT.Phone__c ,
&apos;141&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.MB.Phone__c ,
&apos;112&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SC.Phone__c ,
&apos;124&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.RC.Phone__c ,
&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Phone</label>
    <type>Text</type>
</CustomField>