force-app/main/default/objects/Order/fields/Signature_Post__c.field-meta.xml
<CustomField>
    <fullName>Signature_Post__c</fullName>
    <formula>IF( Region__c = Text($CustomMetadata.Order_Template_Signature_Infos__mdt.SP_Quebec.Region__c) ,
CASE( Text(Contract_Type__c) ,
&apos;119&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.SP_Quebec.Post__c ,
&apos;127&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AC_Quebec.Post__c ,
&apos;124&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.RC_Quebec.Post__c ,
&apos;141&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.MB_Quebec.Post__c ,

&apos;&apos;
),
CASE( Text(Contract_Type__c) ,
&apos;119&apos; ,  $CustomMetadata.Order_Template_Signature_Infos__mdt.SP.Post__c  ,
&apos;124&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.RC.Post__c ,
&apos;141&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.MB.Post__c ,
&apos;127&apos; , $CustomMetadata.Order_Template_Signature_Infos__mdt.AC.Post__c ,
&apos;&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Post</label>
    <type>Text</type>
</CustomField>