force-app/main/default/objects/Order/fields/Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group__c</fullName>
    <label>Tax Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Group_Values</valueSetName>
    </valueSet>
</CustomField>