force-app/main/default/objects/Order/fields/Tax_Total_Formula__c.field-meta.xml
<CustomField>
    <fullName>Tax_Total_Formula__c</fullName>
    <formula>ROUND(( GST__c +  QST__c + HST__c )* TotalAmount ,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>