force-app/main/default/objects/Order/fields/TECH_AssetId__c.field-meta.xml
<CustomField>
    <fullName>TECH_AssetId__c</fullName>
    <formula>CASESAFEID(Case__r.AssetId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_AssetId</label>
    <type>Text</type>
</CustomField>