force-app/main/default/objects/Order/fields/Tips_and_Advice_Link_EN__c.field-meta.xml
<CustomField>
    <fullName>Tips_and_Advice_Link_EN__c</fullName>
    <formula>&apos;https://www.trevi.com/en/tips-and-advice&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tips and Advice Link EN</label>
    <type>Text</type>
</CustomField>