force-app/main/default/objects/Order/fields/Total_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Formula__c</fullName>
    <formula>Tax_Total_Formula__c + TotalAmount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>