force-app/main/default/objects/Order/fields/Total_Amount_tech__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_tech__c</fullName>
    <label>Total Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>