force-app/main/default/objects/Order/fields/Wall_Thickness2__c.field-meta.xml
<CustomField>
    <fullName>Wall_Thickness2__c</fullName>
    <label>Wall Thickness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>