force-app/main/default/objects/Order/fields/Wall_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Wall_Thickness__c</fullName>
    <label>Wall Thickness</label>
    <length>80</length>
    <type>Text</type>
</CustomField>