force-app/main/default/objects/Order/fields/Was_To_Intervene__c.field-meta.xml
<CustomField>
    <fullName>Was_To_Intervene__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is checked if the CR order has ever entered the &quot;to Intervene&quot; status. this will return it to it if the order is deblocked again</description>
    <label>Was To Intervene</label>
    <type>Checkbox</type>
</CustomField>