force-app/main/default/objects/Order/fields/WOLI_Work_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Work_Type_Name__c</fullName>
    <description>This field is auto populated on Fees Payment Emai Trigger. The field is only to be used in email templates</description>
    <label>WOLI Work Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>