force-app/main/default/objects/Order/fields/WTG_Label__c.field-meta.xml
<CustomField>
    <fullName>WTG_Label__c</fullName>
    <formula>CASE(
 Text(ContractType__c),
  &apos;CR&apos;, &apos;CR&apos;,
  &apos;SC&apos;, &apos;SC&apos;,
  &apos;HT&apos;, &apos;HT&apos;,
  &apos;SP&apos;, &apos;SP&apos;,
  &apos;MB&apos;, &apos;MB&apos;,
  &apos;RC&apos;, &apos;RC&apos;,
  &apos;AC&apos;, &apos;AC&apos;,
  &apos;SR&apos;, &apos;SR&apos;,
  &apos;RB&apos;, &apos;RB&apos;,
  &apos;AB&apos;, &apos;AB&apos;,
  &apos;SL&apos;, &apos;SL&apos;,
  &apos;AL&apos;, &apos;AL&apos;,
  &apos;HL&apos;, &apos;HL&apos;,
  &apos;GU&apos;, &apos;GU&apos;,
  &apos;PA&apos;, &apos;PA&apos;,
  &apos;AS&apos;, &apos;AS&apos;,
  &apos;1&apos;, &apos;CR - Premium Cant 48/80 (Couronnement)&apos;,
  &apos;2&apos;, &apos;CR - Premium Cant 48/64 (Couronnement)&apos;,
  &apos;3&apos;, &apos;CR - Premium Cant 48 (Couronnement)&apos;,
  &apos;4&apos;, &apos;CR - Premium Cant 51/63 (Bullnose en Trottoir)&apos;,
  &apos;5&apos;, &apos;CR - Premium Cant 48 (Bullnose en Trottoir)&apos;,
  &apos;6&apos;, &apos;CR - Premium Coping Alu 48/80 (Trottoir Standard)&apos;,
  &apos;7&apos;, &apos;CR - Premium Coping Alu 48 (Trottoir Standard)&apos;,
  &apos;8&apos;, &apos;CR - Premium Coping Alu 48/64 (Trottoir Standard)&apos;,
  &apos;9&apos;, &apos;CR - Premium Cant 48/64 (Bullnose en Trottoir)&apos;,
  &apos;10&apos;, &apos;CR - Acier (Trottoir Standard)&apos;,
  &apos;11&apos;, &apos;CR - Acier (Bullnose en Trottoir)&apos;,
  &apos;12&apos;, &apos;CR - Prestige Cant 51/63 (Couronnement)&apos;,
  &apos;13&apos;, &apos;CR - Prestige Cant 48 (Couronnement)&apos;,
  &apos;14&apos;, &apos;CR - Prestige Cant 63/63 (Bullnose en Trottoir)&apos;,
  &apos;15&apos;, &apos;CR - Prestige Cant 63/63 (Couronnement)&apos;,
  &apos;16&apos;, &apos;CR - Prestige Coping Alu 51/63 (Trottoir Standard)&apos;,
  &apos;17&apos;, &apos;CR - Prestige Cant 48 (Bullnose en Trottoir)&apos;,
  &apos;18&apos;, &apos;CR - Prestige Coping Alu 48 (Trottoir Standard)&apos;,
  &apos;19&apos;, &apos;CR - Prestige Exposé&apos;,
  &apos;20&apos;, &apos;CR - Européa&apos;,
  &apos;21&apos;, &apos;CR - Futura 48&apos;,
  &apos;22&apos;, &apos;CR - Futura Infinity 63&apos;,
  &apos;23&apos;, &apos;CR - Futura Infinity 48&apos;,
  &apos;24&apos;, &apos;CR - Futura 63&apos;,
  &apos;25&apos;, &apos;CR - Fuzion Cant 42 (Couronnement)&apos;,
  &apos;26&apos;, &apos;CR - Prestige Coping Alu 63/63 (Trottoir Standard)&apos;,
  &apos;27&apos;, &apos;CR - Fuzion Cant 42 (Bullnose en Trottoir)&apos;,
  &apos;28&apos;, &apos;CR - Fuzion Coping Alu 42 (Trottoir Standard)&apos;,
  &apos;29&apos;, &apos;CR - Fuzion Cant 48 (Couronnement)&apos;,
  &apos;30&apos;, &apos;CR - Fuzion Cant 48 (Bullnose en Trottoir)&apos;,
  &apos;31&apos;, &apos;CR - Fuzion Coping Alu 48 (Trottoir Standard)&apos;,
  &apos;32&apos;, &apos;CR - Prestige plus (Couronnement)&apos;,
  &apos;33&apos;, &apos;CR - Prestige plus (Trottoir Standard)&apos;,
  &apos;34&apos;, &apos;GU - Prestige plus V (Couronnement)&apos;,
  &apos;35&apos;, &apos;GU - Prestige plus V (Bullnose en trottoir)&apos;,
  &apos;36&apos;, &apos;SC - Harmony&apos;,
  &apos;37&apos;, &apos;SC&apos;,
  &apos;38&apos;, &apos;SC - Industria&apos;,
  &apos;39&apos;, &apos;AC&apos;,
  &apos;40&apos;, &apos;HT&apos;,
  &apos;41&apos;, &apos;HL&apos;,
  &apos;42&apos;, &apos;SP&apos;,
  &apos;43&apos;, &apos;SL&apos;,
  &apos;44&apos;, &apos;MB&apos;,
  &apos;45&apos;, &apos;AB&apos;,
  &apos;46&apos;, &apos;AL&apos;,
  &apos;47&apos;, &apos;RC&apos;,
  &apos;48&apos;, &apos;RB&apos;,
  &apos;49&apos;, &apos;SR-MB&apos;,
  &apos;50&apos;, &apos;SR-AC&apos;,
  &apos;51&apos;, &apos;SR-AB&apos;,
  &apos;52&apos;, &apos;SR-SP&apos;,
  &apos;53&apos;, &apos;CR - Prestige Cant 51/63 (Bullnose en Trottoir)&apos;,
  &apos;HT Industria&apos;, &apos;HT Industria&apos;,
  &apos;Ouverture et Fermeture&apos;, &apos;Ouverture et Fermeture&apos;,
  &apos;Réparation en Magasin&apos;, &apos;Réparation en Magasin&apos;,
  &apos;Service Ab&apos;, &apos;Service Ab&apos;,
  &apos;Service CR&apos;, &apos;Service CR&apos;,
  &apos;Service HT&apos;, &apos;Service HT&apos;,
  &apos;Service Mb&apos;, &apos;Service Mb&apos;,
  &apos;Service SC&apos;, &apos;Service SC&apos;,
  &apos;Service Spa&apos;, &apos;Service Spa&apos;,
  &apos;Service CR - 1 an&apos;, &apos;Service CR - 1 an&apos;,
  &apos;Service HT - 1 an&apos;, &apos;Service HT - 1 an&apos;,
  &apos;Service SC - 1 an&apos;, &apos;Service SC - 1 an&apos;,
  &apos;&apos;
)</formula>
    <label>WTG Label</label>
    <type>Text</type>
</CustomField>