force-app/main/default/objects/Order/recordTypes/Contract.recordType-meta.xml
<RecordType>
    <fullName>Contract</fullName>
    <active>true</active>
    <description>This record type is designed to handle orders that are part of a contractual agreement. It includes fields and processes tailored to managing contract-specific details.</description>
    <label>Contract</label>
</RecordType>