force-app/main/default/objects/Order/recordTypes/Opening_and_Winterizing.recordType-meta.xml
<RecordType>
    <fullName>Opening_and_Winterizing</fullName>
    <active>true</active>
    <description>This record type is designed to manage orders that originate from customers that purchase pool/ spa opening and winterizing services. It includes fields and processes tailored to efficiently handle and track these specific types of orders.</description>
    <label>Opening and Winterizing</label>
</RecordType>